hopeful fix for heading size on mobile for registered trademark top of page

--- a/css/reading-is-magic.webflow.css
+++ b/css/reading-is-magic.webflow.css
@@ -4664,6 +4664,10 @@ blockquote {
     font-size: 1.7rem;
   }
 
+  .heading-3 {
+    font-size: 1rem;
+  }
+
   .paragraph-3 {
     font-size: 1rem;
     line-height: 2rem;
